--- a/README
+++ b/README
@@ -1,16 +1,7 @@
 Random-Interval version 0.01
 ============================
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
-
-A README file is required for CPAN modules since CPAN extracts the
-README file from a module distribution so that people browsing the
-archive can use it get an idea of the modules uses. It is usually a
-good idea to provide version information here so that people can
-decide whether fixes for the module are worth downloading.
+This module is pretty trivial, just see its Perldoc documentation for usage.
 
 INSTALLATION
 
@@ -25,13 +16,13 @@ DEPENDENCIES
 
 This module requires these other modules and libraries:
 
-  blah blah blah
+  POSIX
 
 COPYRIGHT AND LICENCE
 
-Put the correct copyright and licence information here.
+Copyright (C) 2010 Shutterstock Images LLC
 
-Copyright (C) 2010 by A. U. Thor
+Written by Neil Hooey <neil@shutterstock.com>
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.8.8 or,
